HA-Controller create function updated and swagger.json file POST updated
